<resources>
    <string name="app_name">Avión</string>
    <string name="text_clase_name">Clase</string>
    <string name="text_ubicaciones_name">Ubicación</string>
    <string name="text_name_res">Nombre</string>
    <string name="text_hint_nombre">Nombre</string>
    <string name="text_dni_res">DNI</string>
    <string name="text_hint_dni">DNI</string>
    <string name="text_reservar">Reservar</string>
    <string name="text_buscar_dni">DNI de pasajero</string>
    <string name="text_buscar">Buscar</string>
    <string name="text_quitar_pasajero">Quitar el Pasajero</string>
    <string name="text_desocupar_avion">Desocupar Avion</string>
    <string name="text_lista_de_pasajeros">Lista de reserva</string>
    <string name="text_get_pasajero">Buscar Pasajero</string>
    <string name="text_pasajero_reservado">Pasajero ha reservado</string>
    <string name="no_hay_sillas">No hay sillas en clase</string>
    <string name="text_error_pasajero_no_hay">No hay pasajero con este DNI</string>
    <string name="pasajero_ya_reservado">Pasajero con lo mismo DNI ya ha reservado</string>
    <string name="text_busqueda_title">Buscar pasajero</string>
    <string name="text_list_de_reserva_title">Lista de reserva</string>
    <string name="text_desoucpado">Desocupado</string>
    <string name="text_en_ubication">en ubicación</string>
    <string name="text_pasajero_ha_quitado">ha quitado</string>
    <string name="text_quitar_pasajero_title">Quitar pasajero</string>
    <string name="text_numero_de_silla">Numero de silla</string>
    <string name="text_precio">Precio</string>
    <string name="text_error_empty_name_dni">ERROR! Nombre or DNI estan vacios</string>
</resources>