<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/text_clases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_clase_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_clases"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="15"
        />
    <Spinner
        android:id="@+id/spinner_clases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_clases"
        app:layout_constraintWidth_percent="35"
        />
    <TextView
        android:id="@+id/text_ubicaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_ubicaciones_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_ubicaciones"
        app:layout_constraintTop_toBottomOf="@id/text_clases"
        app:layout_constraintWidth_percent="15"
        />
    <Spinner
        android:id="@+id/spinner_ubicaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_clases"
        app:layout_constraintStart_toEndOf="@+id/text_ubicaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="35"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_name_res"
        app:layout_constraintTop_toBottomOf="@id/text_ubicaciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/nombre"
        app:layout_constraintWidth_percent="15"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_nombre"
        app:layout_constraintTop_toBottomOf="@id/spinner_clases"
        app:layout_constraintWidth_percent="85"
        android:hint="@string/text_hint_nombre"
        />
    <TextView
        android:id="@+id/text_dni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_dni_res"
        app:layout_constraintTop_toBottomOf="@id/text_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/dni"
        app:layout_constraintWidth_percent="15"
        />
    <EditText
        android:id="@+id/dni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_dni"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintWidth_percent="85"
        android:hint="@string/text_hint_dni"
        />

    <Button
        android:id="@+id/button_reservar"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_reservar"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni"
        android:onClick="reservar"
        />

    <Button
        android:id="@+id/quitar_pasajero"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonRemove"
        android:text="@string/text_quitar_pasajero"
        app:layout_constraintTop_toBottomOf="@+id/button_reservar"
        app:layout_constraintBottom_toTopOf="@+id/get_sillas_reservadas"
        />

    <Button
        android:id="@+id/get_sillas_reservadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonConfirm"
        android:text="@string/text_lista_de_pasajeros"
        app:layout_constraintTop_toBottomOf="@+id/button_reservar"
        app:layout_constraintBottom_toTopOf="@+id/get_pasajero"
        />

    <Button
        android:id="@+id/get_pasajero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonConfirm"
        android:text="@string/text_get_pasajero"
        app:layout_constraintTop_toBottomOf="@+id/get_sillas_reservadas"
        />

    <Button
        android:id="@+id/desocupar_avion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonRemove"
        android:text="@string/text_desocupar_avion"
        app:layout_constraintTop_toBottomOf="@+id/get_pasajero"
        />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/desocupar_avion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>