<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".BusquedaActivity">

    <TextView
        android:id="@+id/text_buscar_dni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_buscar_dni"
        app:layout_constraintWidth_percent="25"
        android:hint="@string/text_hint_dni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/input_busca_dni"
        />
    <EditText
        android:id="@+id/input_busca_dni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_buscar_dni"
        app:layout_constraintBottom_toBottomOf="@+id/text_buscar_dni"
    />
    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonMain"
        android:text="@string/text_buscar"
        app:layout_constraintTop_toBottomOf="@+id/input_busca_dni"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/text_info_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar"
        />
</androidx.constraintlayout.widget.ConstraintLayout>